# prunerepo

./: .packit.yaml  prunerepo  prunerepo.spec  pyproject.toml  setup.py
.tito/: releasers.conf
man/: prunerepo.1.asciidoc
prunerepo/: __init__.py  helpers.py  main.py  pair_srpm_rpm.py
tests/: testlib.sh
tests/base/: test.sh
tests/keep-srpm-for-rpm/: dummy-pkg-blah-2-1.fc34.x86_64.rpm  test.sh
tests/keep-srpm-for-rpm/orig-repo/repodata/: edcb33b99554d8904ddd624662e94281c554dc158ee5cf39f1df286f7e7aaf7c-primary.sqlite.bz2  repomd.xml
