[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prunerepo"
version = "1.26"
description = "Remove old packages from rpm-md repository"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "copr-team", email = "copr-team@redhat.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.6"

[project.scripts]
prunerepo = "prunerepo.main:main"

[tool.setuptools]
packages = ["prunerepo"]
